spectec/test/elab/neg/type-vart-targ-arity-mismatch.spectec
;; Reference a parameterized type without supplying its type argument.

syntax foo<T> = T

syntax bar = foo
